--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = lib/glfw
 	url = https://github.com/glfw/glfw
 	ignore = dirty
+[submodule "lib/glm"]
+	path = lib/glm
+	url = https://github.com/g-truc/glm
+	ignore = dirty
